precompiles/utils/macro/tests/precompile/discriminant/missing-param.stderr
error: The discriminant function must only take the code address (H160) as parameter.
  --> tests/precompile/discriminant/missing-param.rs:22:2
   |
22 |     fn discriminant() -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
